--- a/mirage/opam-repository/commit/2ded463f5a7681ca7b94aa44027077addf5d2c0f/status/ci/datakit/1 4.03.0/description
+++ b/mirage/opam-repository/commit/2ded463f5a7681ca7b94aa44027077addf5d2c0f/status/ci/datakit/1 4.03.0/description
@@ -1,1 +1,1 @@
-aacplus failed (still waiting for acgtk, altgr-ergo, angstrom, annexlib, annot, ansi-parse, ansicolor, ANSITerminal, anycache, ao, apalogret
+aacplus failed (still waiting for anycache, ao, apalogretrieve, aperf, apron, arakoon, archimedes, argon2, arp, ascii85, asetmap, asl, asn1-
