--- a/mirage/opam-repository/commit/2ded463f5a7681ca7b94aa44027077addf5d2c0f/status/ci/datakit/1 4.03.0/description
+++ b/mirage/opam-repository/commit/2ded463f5a7681ca7b94aa44027077addf5d2c0f/status/ci/datakit/1 4.03.0/description
@@ -1,1 +1,1 @@
-aacplus, async-mvar, async_core failed (still waiting for anycache, ao, apalogretrieve, aperf, apron, arakoon, archimedes, argon2, arp, asci
+aacplus, async-mvar, async_core failed (still waiting for apron, arakoon, ascii85, asetmap, asl, asn1-combinators, assertions, assimp, astri
