--- a/mirage/opam-repository/commit/2ded463f5a7681ca7b94aa44027077addf5d2c0f/status/ci/datakit/1 4.03.0/description
+++ b/mirage/opam-repository/commit/2ded463f5a7681ca7b94aa44027077addf5d2c0f/status/ci/datakit/1 4.03.0/description
@@ -1,1 +1,1 @@
-aacplus, arakoon, async-mvar, async_core failed (still waiting for async-zmq, async_extended, async_find, async_inotify, async_parallel, asy
+aacplus, arakoon, async-mvar, async_core failed (still waiting for async-zmq, async_extended, async_parallel, async_shell, async_smtp, async
